Fix wide width to match editor better; add some padding/margins to left and right on full-aligned blocks that have text within.

--- a/publication/blocks.css
+++ b/publication/blocks.css
@@ -59,12 +59,12 @@ Description: Used to style Gutenberg Blocks.
 
 /* Wide Width */
 
-@media (min-width: 1024px) {
+@media (min-width: 1100px) {
 	.no-sidebar .alignwide {
-		width: 120%;
-		max-width: 120%;
-		margin-left: -10%;
-		margin-right: -10%;
+		width: 1100px;
+		max-width: 1100px;
+		margin-left: -268px;
+		margin-right: -268px;
 		position: relative;
 	}
 
